# bibo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
Formula/: bibo.rb
docs/: index.html
src/: cli.rs  error.rs  main.rs
src/audio/: mod.rs  player.rs
src/download/: mod.rs  sherpa.rs
src/tts/: engine.rs  mod.rs  sherpa.rs  voice.rs
